2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Allow setting TargetGtkVersion to
	  DefaultGtkVersion when current value is null.

2007-09-19  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore/GtkDesignInfo.cs: Don't touch GTK# assembly versions
	  when a target version is not set. Don't use gtkVersion=null to represent
	  default version.
	* MonoDevelop.GtkCore/GtkCoreService.cs: Set TargetGtkVersion on new
	  projects. Bump default version to 2.8.

2007-09-17  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.GtkCore.mdp, lib/libsteticui.mdp, lib/libstetic.mdp,
	  lib/Makefile.am, MonoDevelop.GtkCore.mds, Makefile.am: Use projects for
	  imported stetic libraries.

2007-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: Removed access to
	  Component object.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderProject.cs: Remove unused method.

2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.GtkCore.Dialogs/SelectRenamedClassDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/WidgetBuilderOptionPanel.cs,
	  MonoDevelop.GtkCore.Dialogs/BindDesignDialog.cs,
	  MonoDevelop.GtkCore.Dialogs/ConfirmWindowDeleteDialog.cs: Fix warnings.

2007-09-13  Michael Hutchinson <mhutchinson@novell.com> 

	* lib/stetic, Makefile.am, lib/Makefile.am: Build stetic from 
	  svn:externals.
	* lib/libsteticui.dll.config, lib/libstetic.dll.config,
	  lib/libstetic.dll, lib/libsteticui.dll: Removed.

2007-09-10  Michael Hutchinson <mhutchinson@novell.com> 

	* templates/WidgetPartial.xft.xml, templates/Widget.xft.xml,
	  templates/WindowPartial.xft.xml, templates/Window.xft.xml,
	  templates/ActionGroupPartial.xft.xml, templates/ActionGroup.xft.xml,
	  templates/DialogPartial.xft.xml, templates/Dialog.xft.xml: Remove
	  deprecated FileOptions element from templates.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 
